--- a/public/service/index.html
+++ b/public/service/index.html
@@ -73,18 +73,19 @@
   position: absolute;
   top: 50%;
   right: 12px;
-  transform: translateY(-50%);
+  transform: translateY(-50%) translateY(-1px);
   cursor: pointer;
   height: 20px;
   width: 20px;
 }
 
 #togglePasswordIcon img {
+  display: block;              /* 🔑 entfernt Baseline */
   width: 20px;
   height: 20px;
-  display: block;
   filter: brightness(0) invert(1);
 }
+
 
 .password-wrapper input {
   width: 100%;
